# prolog

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build.sh  main.sh  todo.md  update_todo.sh
include/: knowlageBase.hpp  knowledgeBase.hpp  rule.hpp  term.hpp  unifier.hpp  utils.hpp
src/: knowlageBase.cpp  knowledgeBase.cpp  main.cpp  rule.cpp  term.cpp  unifier.cpp  utils.cpp
test/: CMakeLists.txt  knowledgeBase_test.cpp  lexer_test.cpp  rule_test.cpp  term_test.cpp  unifier_test.cpp  utils_test.cpp
